Implementando subrecursos de ocorrencias