@@ -1,7 +1,6 @@
 package com.brgabrieldeoliveira.springrestalgaworks.api.dtos;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -9,6 +8,7 @@ import org.springframework.stereotype.Component;
 
 import com.brgabrieldeoliveira.springrestalgaworks.api.domain.Cliente;
 import com.brgabrieldeoliveira.springrestalgaworks.api.domain.Entrega;
+import com.brgabrieldeoliveira.springrestalgaworks.api.domain.Ocorrencia;
 
 @Component
 public class ApiMappers {
@@ -20,11 +20,21 @@ public class ApiMappers {
 	public EntregaOutputDto toOutputDto(Entrega entrega) {
 		return modelMapper.map(entrega, EntregaOutputDto.class);
 	}
+
+	public OcorrenciaOutputDto toOutputDto(Ocorrencia ocorrencia) {
+		return modelMapper.map(ocorrencia, OcorrenciaOutputDto.class);
+	}
 	
-	public List<EntregaOutputDto> toOutputDtoList(List<Entrega> entregas) {
+	public List<EntregaOutputDto> toOutputEntregaList(List<Entrega> entregas) {
 		return entregas.stream()
-				.map(x -> modelMapper.map(x, EntregaOutputDto.class))
-				.collect(Collectors.toList());
+				.map(x -> toOutputDto(x))
+				.toList();
+	}
+
+	public List<OcorrenciaOutputDto> toOutputOcorrenciaList(List<Ocorrencia> ocorrencias) {
+		return ocorrencias.stream()
+				.map(x -> toOutputDto(x))
+				.toList();
 	}
 
 	public Entrega toEntity(EntregaInputDto entregaInputDto) {
@@ -34,5 +44,6 @@ public class ApiMappers {
 	public Cliente toEntity(ClienteInputDto clienteInputDto) {
 		return modelMapper.map(clienteInputDto, Cliente.class);
 	}
+
 	
 }
